@@ -86,7 +86,7 @@ class MapTask extends Task {
                  ) throws IOException {
     super(jobFile, taskId, partition);
     this.splitClass = splitClass;
-    this.split.set(split);
+    this.split = split;
   }
 
   @Override
@@ -116,6 +116,7 @@ class MapTask extends Task {
     super.write(out);
     Text.writeString(out, splitClass);
     split.write(out);
+    split = null;
   }
   
   @Override
